--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 		"start": "node app.js"
 	},
 	"dependencies": {
+		"crypto-js": "^3.1.9-1",
 		"dotenv": "^7.0.0",
 		"express": "^4.16.4",
 		"mongoose": "^5.5.4"
